# nrgboost

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yaml
src/nrgboost/: wrapper.py
src/nrgboost/tree/eval/: build.py
