[build-system]
requires = ["setuptools>=61", "wheel", "cffi>=1"]
build-backend = "setuptools.build_meta"

# Project metadata still lives in setup.py. This file only adds the PEP 517 build backend
# and the cibuildwheel configuration.

[tool.cibuildwheel]
# The PCG RNG needs 128-bit integers (no MSVC support), so we target CPython
# on Linux + macOS. Python 3.9 is EOL (Oct 2025) and numba 0.61+ dropped it,
# so the lowest version we ship is 3.10.
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux* pp* *_i686"
build-frontend = "build"
test-command = 'python -c "import nrgboost; from nrgboost.tree import eval"'

[tool.cibuildwheel.linux]
# numpy 2.x / scipy 1.14+ only ship manylinux_2_28 wheels (no more 2014/glibc
# 2.17), so build in the 2.28 image. Otherwise the post-build test container
# can't install scipy from a wheel and tries (and fails) to build it from source.
manylinux-x86-64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
# Apple Clang needs Homebrew's libomp for OpenMP; delocate then bundles the
# dylib into the wheel so installs require no system dependencies.
before-all = "brew install libomp"
